<?xml version="1.0"?>
<package>
  <name>rosbag_topic</name>
  <version>0.1.0</version>
  <description>The package for vision based positional tracking</description>

  <maintainer email="sunggoo@kaist.ac.kr">sunggooJung</maintainer>

  <license>TODO</license>
 
  <buildtool_depend>catkin</buildtool_depend>
</package>

